<resources>
    <string name="app_name">Place Library</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="address">Address Title</string>
    <string name="address_detail">Address Detail</string>
    <string name="elevation">Elevation</string>
    <string name="lat">Lat</string>
    <string name="longitude">Long</string>
    <string name="image">image</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="navigation">navigation</string>
    <string name="distance">Distance</string>
    <string name="initial_bearing">Initial Bearing</string>
    <string name="calculate">Calculate</string>
</resources>
